Sources/CZigLayout/include/omni_layout.h

/// Input descriptor for one window on a single axis.
/// Zig struct OmniAxisInput must match this layout exactly.
typedef struct {
    double weight;
    double min_constraint;
    double max_constraint;
    uint8_t has_max_constraint;
    uint8_t is_constraint_fixed;
    uint8_t has_fixed_value;
    double fixed_value; // ignored when has_fixed_value == 0
} OmniAxisInput;
/// Result for one window on a single axis.
typedef struct {
    double value;
    uint8_t was_constrained;
} OmniAxisOutput;
typedef struct {
    double view_pos;
    size_t column_index;
} OmniSnapResult;
enum {
    OMNI_VIEWPORT_GESTURE_HISTORY_CAP = 64
};
typedef struct {
    uint8_t is_trackpad;
    size_t history_count;
    size_t history_head;
    double tracker_position;
    double current_view_offset;
    double stationary_view_offset;
    double delta_from_tracker;
    double history_deltas[OMNI_VIEWPORT_GESTURE_HISTORY_CAP];
    double history_timestamps[OMNI_VIEWPORT_GESTURE_HISTORY_CAP];
} OmniViewportGestureState;
typedef struct {
    size_t resolved_column_index;
    double offset_delta;
    double adjusted_target_offset;
    double target_offset;
    double snap_delta;
    uint8_t snap_to_target_immediately;
} OmniViewportTransitionResult;
typedef struct {
    double target_offset;
    double offset_delta;
    uint8_t is_noop;
} OmniViewportEnsureVisibleResult;
typedef struct {
    uint8_t applied;
    double new_offset;
    double selection_progress;
    uint8_t has_selection_steps;
    int64_t selection_steps;
} OmniViewportScrollResult;
typedef struct {
    double current_view_offset;
    double selection_progress;
    uint8_t has_selection_steps;
    int64_t selection_steps;
} OmniViewportGestureUpdateResult;
typedef struct {
    size_t resolved_column_index;
    double spring_from;
    double spring_to;
    double initial_velocity;
} OmniViewportGestureEndResult;
typedef struct {
    double span;
    double render_offset_x;
    double render_offset_y;
    uint8_t is_tabbed;
    double tab_indicator_width;
    size_t window_start;
    size_t window_count;
} OmniNiriColumnInput;
typedef struct {
    double weight;
    double min_constraint;
    double max_constraint;
    uint8_t has_max_constraint;
    uint8_t is_constraint_fixed;
    uint8_t has_fixed_value;
    double fixed_value;
    uint8_t sizing_mode;
    double render_offset_x;
    double render_offset_y;
} OmniNiriWindowInput;
typedef struct {
    double frame_x;
    double frame_y;
    double frame_width;
    double frame_height;
    double animated_x;
    double animated_y;
    double animated_width;
    double animated_height;
    double resolved_span;
    uint8_t was_constrained;
    uint8_t hide_side;
    size_t column_index;
} OmniNiriWindowOutput;
typedef struct {
    double frame_x;
    double frame_y;
    double frame_width;
    double frame_height;
    uint8_t hide_side;
    uint8_t is_visible;
} OmniNiriColumnOutput;
typedef struct {
    size_t window_index;
    size_t column_index;
    double frame_x;
    double frame_y;
    double frame_width;
    double frame_height;
    uint8_t is_fullscreen;
} OmniNiriHitTestWindow;
typedef struct {
    uint8_t is_valid;
    double min_y;
    double max_y;
    size_t post_insertion_count;
} OmniNiriColumnDropzoneMeta;
typedef struct {
    int64_t window_index;
    uint8_t edges;
} OmniNiriResizeHitResult;
typedef struct {
    int64_t window_index;
    uint8_t insert_position;
} OmniNiriMoveTargetResult;
typedef struct {
    double target_frame_x;
    double target_frame_y;
    double target_frame_width;
    double target_frame_height;
    double column_min_y;
    double column_max_y;
    double gap;
    uint8_t insert_position;
    size_t post_insertion_count;
} OmniNiriDropzoneInput;
typedef struct {
    double frame_x;
    double frame_y;
    double frame_width;
    double frame_height;
    uint8_t is_valid;
} OmniNiriDropzoneResult;
typedef struct {
    uint8_t edges;
    double start_x;
    double start_y;
    double current_x;
    double current_y;
    double original_column_width;
    double min_column_width;
    double max_column_width;
    double original_window_weight;
    double min_window_weight;
    double max_window_weight;
    double pixels_per_weight;
    uint8_t has_original_view_offset;
    double original_view_offset;
} OmniNiriResizeInput;
typedef struct {
    uint8_t changed_width;
    double new_column_width;
    uint8_t changed_weight;
    double new_window_weight;
    uint8_t adjust_view_offset;
    double new_view_offset;
} OmniNiriResizeResult;
typedef struct {
    uint8_t bytes[16];
} OmniUuid128;
typedef struct {
    OmniUuid128 column_id;
    size_t window_start;
    size_t window_count;
    size_t active_tile_idx;
    uint8_t is_tabbed;
    double size_value;
} OmniNiriStateColumnInput;
typedef struct {
    OmniUuid128 window_id;
    OmniUuid128 column_id;
    size_t column_index;
    double size_value;
} OmniNiriStateWindowInput;
typedef struct {
    OmniUuid128 column_id;
    size_t window_start;
    size_t window_count;
    size_t active_tile_idx;
    uint8_t is_tabbed;
    double size_value;
} OmniNiriRuntimeColumnState;
typedef struct {
    OmniUuid128 window_id;
    OmniUuid128 column_id;
    size_t column_index;
    double size_value;
} OmniNiriRuntimeWindowState;
typedef struct {
    const OmniNiriRuntimeColumnState *columns;
    size_t column_count;
    const OmniNiriRuntimeWindowState *windows;
    size_t window_count;
} OmniNiriRuntimeStateExport;
typedef struct {
    size_t column_count;
    size_t window_count;
    int64_t first_invalid_column_index;
    int64_t first_invalid_window_index;
    int32_t first_error_code;
} OmniNiriStateValidationResult;
typedef struct {
    uint8_t op;
    uint8_t direction;
    uint8_t orientation;
    uint8_t infinite_loop;
    int64_t selected_window_index;
    int64_t selected_column_index;
    int64_t selected_row_index;
    int64_t step;
    int64_t target_row_index;
    int64_t target_column_index;
    int64_t target_window_index;
} OmniNiriNavigationRequest;
typedef struct {
    uint8_t has_target;
    int64_t target_window_index;
    uint8_t update_source_active_tile;
    int64_t source_column_index;
    int64_t source_active_tile_idx;
    uint8_t update_target_active_tile;
    int64_t target_column_index;
    int64_t target_active_tile_idx;
    uint8_t refresh_tabbed_visibility_source;
    uint8_t refresh_tabbed_visibility_target;
} OmniNiriNavigationResult;
typedef struct {
    OmniNiriNavigationRequest request;
} OmniNiriNavigationApplyRequest;
typedef struct {
    uint8_t applied;
    uint8_t has_target_window_id;
    OmniUuid128 target_window_id;
    uint8_t update_source_active_tile;
    OmniUuid128 source_column_id;
    int64_t source_active_tile_idx;
    uint8_t update_target_active_tile;
    OmniUuid128 target_column_id;
    int64_t target_active_tile_idx;
    uint8_t refresh_tabbed_visibility_source;
    OmniUuid128 refresh_source_column_id;
    uint8_t refresh_tabbed_visibility_target;
    OmniUuid128 refresh_target_column_id;
} OmniNiriNavigationApplyResult;
typedef struct {
    uint8_t op;
    uint8_t direction;
    uint8_t infinite_loop;
    uint8_t insert_position;
    int64_t source_window_index;
    int64_t target_window_index;
    int64_t max_windows_per_column;
    int64_t source_column_index;
    int64_t target_column_index;
    int64_t insert_column_index;
    int64_t max_visible_columns;
    uint8_t selected_node_kind;
    int64_t selected_node_index;
    int64_t focused_window_index;
} OmniNiriMutationRequest;
typedef struct {
    uint8_t kind;
    int64_t subject_index;
    int64_t related_index;
    int64_t value_a;
    int64_t value_b;
    double scalar_a;
    double scalar_b;
} OmniNiriMutationEdit;
enum {
    OMNI_NIRI_MUTATION_MAX_EDITS = 32
};
enum {
    OMNI_NIRI_RUNTIME_HINT_MAX_COLUMNS = 2
};
typedef struct {
    uint8_t applied;
    uint8_t has_target_window;
    int64_t target_window_index;
    uint8_t has_target_node;
    uint8_t target_node_kind;
    int64_t target_node_index;
    size_t edit_count;
    OmniNiriMutationEdit edits[OMNI_NIRI_MUTATION_MAX_EDITS];
} OmniNiriMutationResult;
typedef struct {
    OmniNiriMutationRequest request;
    uint8_t has_incoming_window_id;
    OmniUuid128 incoming_window_id;
    uint8_t has_created_column_id;
    OmniUuid128 created_column_id;
    uint8_t has_placeholder_column_id;
    OmniUuid128 placeholder_column_id;
} OmniNiriMutationApplyRequest;
typedef struct {
    uint8_t applied;
    uint8_t has_target_window_id;
    OmniUuid128 target_window_id;
    uint8_t has_target_node_id;
    uint8_t target_node_kind;
    OmniUuid128 target_node_id;
    uint8_t refresh_tabbed_visibility_count;
    OmniUuid128 refresh_tabbed_visibility_column_ids[OMNI_NIRI_RUNTIME_HINT_MAX_COLUMNS];
    uint8_t reset_all_column_cached_widths;
    uint8_t has_delegate_move_column;
    OmniUuid128 delegate_move_column_id;
    uint8_t delegate_move_direction;
} OmniNiriMutationApplyResult;
typedef struct {
    uint8_t op;
    int64_t source_window_index;
    int64_t source_column_index;
    int64_t max_visible_columns;
} OmniNiriWorkspaceRequest;
typedef struct {
    uint8_t kind;
    int64_t subject_index;
    int64_t related_index;
    int64_t value_a;
    int64_t value_b;
} OmniNiriWorkspaceEdit;
enum {
    OMNI_NIRI_WORKSPACE_MAX_EDITS = 16
};
typedef struct {
    uint8_t applied;
    size_t edit_count;
    OmniNiriWorkspaceEdit edits[OMNI_NIRI_WORKSPACE_MAX_EDITS];
} OmniNiriWorkspaceResult;
typedef struct {
    OmniNiriWorkspaceRequest request;
    uint8_t has_target_created_column_id;
    OmniUuid128 target_created_column_id;
    uint8_t has_source_placeholder_column_id;
    OmniUuid128 source_placeholder_column_id;
} OmniNiriWorkspaceApplyRequest;
typedef struct {
    uint8_t applied;
    uint8_t has_source_selection_window_id;
    OmniUuid128 source_selection_window_id;
    uint8_t has_target_selection_window_id;
    OmniUuid128 target_selection_window_id;
    uint8_t has_moved_window_id;
    OmniUuid128 moved_window_id;
} OmniNiriWorkspaceApplyResult;
typedef struct {
    OmniUuid128 node_id;
    int64_t parent_index;
    int64_t first_child_index;
    int64_t second_child_index;
    uint8_t kind;
    uint8_t orientation;
    double ratio;
    uint8_t has_window_id;
    OmniUuid128 window_id;
    uint8_t is_fullscreen;
} OmniDwindleSeedNode;
typedef struct {
    int64_t root_node_index;
    int64_t selected_node_index;
    uint8_t has_preselection;
    uint8_t preselection_direction;
} OmniDwindleSeedState;
typedef struct {
    double screen_x;
    double screen_y;
    double screen_width;
    double screen_height;
    double inner_gap;
    double outer_gap_top;
    double outer_gap_bottom;
    double outer_gap_left;
    double outer_gap_right;
    double single_window_aspect_width;
    double single_window_aspect_height;
    double single_window_aspect_tolerance;
} OmniDwindleLayoutRequest;
typedef struct {
    OmniUuid128 window_id;
    double min_width;
    double min_height;
    double max_width;
    double max_height;
    uint8_t has_max_width;
    uint8_t has_max_height;
    uint8_t is_fixed;
} OmniDwindleWindowConstraint;
typedef struct {
    OmniUuid128 window_id;
    double frame_x;
    double frame_y;
    double frame_width;
    double frame_height;
} OmniDwindleWindowFrame;
typedef struct {
    OmniUuid128 window_id;
} OmniDwindleAddWindowPayload;
typedef struct {
    OmniUuid128 window_id;
} OmniDwindleRemoveWindowPayload;
typedef struct {
    const OmniUuid128 *window_ids;
    size_t window_count;
} OmniDwindleSyncWindowsPayload;
typedef struct {
    uint8_t direction;
} OmniDwindleMoveFocusPayload;
typedef struct {
    uint8_t direction;
} OmniDwindleSwapWindowsPayload;
typedef struct {
    uint8_t unused;
} OmniDwindleToggleFullscreenPayload;
typedef struct {
    uint8_t unused;
} OmniDwindleToggleOrientationPayload;
typedef struct {
    double delta;
    uint8_t direction;
} OmniDwindleResizeSelectedPayload;
typedef struct {
    uint8_t unused;
} OmniDwindleBalanceSizesPayload;
typedef struct {
    uint8_t forward;
} OmniDwindleCycleSplitRatioPayload;
typedef struct {
    uint8_t stable;
} OmniDwindleMoveSelectionToRootPayload;
typedef struct {
    uint8_t unused;
} OmniDwindleSwapSplitPayload;
typedef struct {
    uint8_t direction;
} OmniDwindleSetPreselectionPayload;