zig/omni/abi_types.zig

pub const OmniAxisInput = extern struct {
    weight: f64,
    min_constraint: f64,
    max_constraint: f64,
    has_max_constraint: u8,
    is_constraint_fixed: u8,
    has_fixed_value: u8,
    fixed_value: f64,
};

pub const OmniAxisOutput = extern struct {
    value: f64,
    was_constrained: u8,
};

pub const OmniSnapResult = extern struct {
    view_pos: f64,
    column_index: usize,
};

pub const OmniViewportGestureState = extern struct {
    is_trackpad: u8,
    history_count: usize,
    history_head: usize,
    tracker_position: f64,
    current_view_offset: f64,
    stationary_view_offset: f64,
    delta_from_tracker: f64,
    history_deltas: [OMNI_VIEWPORT_GESTURE_HISTORY_CAP]f64,
    history_timestamps: [OMNI_VIEWPORT_GESTURE_HISTORY_CAP]f64,
};

pub const OmniViewportTransitionResult = extern struct {
    resolved_column_index: usize,
    offset_delta: f64,
    adjusted_target_offset: f64,
    target_offset: f64,
    snap_delta: f64,
    snap_to_target_immediately: u8,
};

pub const OmniViewportEnsureVisibleResult = extern struct {
    target_offset: f64,
    offset_delta: f64,
    is_noop: u8,
};

pub const OmniViewportScrollResult = extern struct {
    applied: u8,
    new_offset: f64,
    selection_progress: f64,
    has_selection_steps: u8,
    selection_steps: i64,
};

pub const OmniViewportGestureUpdateResult = extern struct {
    current_view_offset: f64,
    selection_progress: f64,
    has_selection_steps: u8,
    selection_steps: i64,
};

pub const OmniViewportGestureEndResult = extern struct {
    resolved_column_index: usize,
    spring_from: f64,
    spring_to: f64,
    initial_velocity: f64,
};

pub const OmniNiriColumnInput = extern struct {
    span: f64,
    render_offset_x: f64,
    render_offset_y: f64,
    is_tabbed: u8,
    tab_indicator_width: f64,
    window_start: usize,
    window_count: usize,
};

pub const OmniNiriWindowInput = extern struct {
    weight: f64,
    min_constraint: f64,
    max_constraint: f64,
    has_max_constraint: u8,
    is_constraint_fixed: u8,
    has_fixed_value: u8,
    fixed_value: f64,
    sizing_mode: u8,
    render_offset_x: f64,
    render_offset_y: f64,
};

pub const OmniNiriWindowOutput = extern struct {
    frame_x: f64,
    frame_y: f64,
    frame_width: f64,
    frame_height: f64,
    animated_x: f64,
    animated_y: f64,
    animated_width: f64,
    animated_height: f64,
    resolved_span: f64,
    was_constrained: u8,
    hide_side: u8,
    column_index: usize,
};

pub const OmniNiriColumnOutput = extern struct {
    frame_x: f64,
    frame_y: f64,
    frame_width: f64,
    frame_height: f64,
    hide_side: u8,
    is_visible: u8,
};

pub const OmniNiriHitTestWindow = extern struct {
    window_index: usize,
    column_index: usize,
    frame_x: f64,
    frame_y: f64,
    frame_width: f64,
    frame_height: f64,
    is_fullscreen: u8,
};

pub const OmniNiriColumnDropzoneMeta = extern struct {
    is_valid: u8,
    min_y: f64,
    max_y: f64,
    post_insertion_count: usize,
};

pub const OmniNiriResizeHitResult = extern struct {
    window_index: i64,
    edges: u8,
};

pub const OmniNiriMoveTargetResult = extern struct {
    window_index: i64,
    insert_position: u8,
};

pub const OmniNiriDropzoneInput = extern struct {
    target_frame_x: f64,
    target_frame_y: f64,
    target_frame_width: f64,
    target_frame_height: f64,
    column_min_y: f64,
    column_max_y: f64,
    gap: f64,
    insert_position: u8,
    post_insertion_count: usize,
};

pub const OmniNiriDropzoneResult = extern struct {
    frame_x: f64,
    frame_y: f64,
    frame_width: f64,
    frame_height: f64,
    is_valid: u8,
};

pub const OmniNiriResizeInput = extern struct {
    edges: u8,
    start_x: f64,
    start_y: f64,
    current_x: f64,
    current_y: f64,
    original_column_width: f64,
    min_column_width: f64,
    max_column_width: f64,
    original_window_weight: f64,
    min_window_weight: f64,
    max_window_weight: f64,
    pixels_per_weight: f64,
    has_original_view_offset: u8,
    original_view_offset: f64,
};

pub const OmniNiriResizeResult = extern struct {
    changed_width: u8,
    new_column_width: f64,
    changed_weight: u8,
    new_window_weight: f64,
    adjust_view_offset: u8,
    new_view_offset: f64,
};

pub const OmniUuid128 = extern struct {
    bytes: [16]u8,
};

pub const OmniNiriStateColumnInput = extern struct {
    column_id: OmniUuid128,
    window_start: usize,
    window_count: usize,
    active_tile_idx: usize,
    is_tabbed: u8,
    size_value: f64,
};

pub const OmniNiriStateWindowInput = extern struct {
    window_id: OmniUuid128,
    column_id: OmniUuid128,
    column_index: usize,
    size_value: f64,
};

pub const OmniNiriRuntimeColumnState = extern struct {
    column_id: OmniUuid128,
    window_start: usize,
    window_count: usize,
    active_tile_idx: usize,
    is_tabbed: u8,
    size_value: f64,
};

pub const OmniNiriRuntimeWindowState = extern struct {
    window_id: OmniUuid128,
    column_id: OmniUuid128,
    column_index: usize,
    size_value: f64,
};

pub const OmniNiriRuntimeStateExport = extern struct {
    columns: [*c]const OmniNiriRuntimeColumnState,
    column_count: usize,
    windows: [*c]const OmniNiriRuntimeWindowState,
    window_count: usize,
};

pub const OmniNiriStateValidationResult = extern struct {
    column_count: usize,
    window_count: usize,
    first_invalid_column_index: i64,
    first_invalid_window_index: i64,
    first_error_code: i32,
};

pub const OmniNiriNavigationRequest = extern struct {
    op: u8,
    direction: u8,
    orientation: u8,
    infinite_loop: u8,
    selected_window_index: i64,
    selected_column_index: i64,
    selected_row_index: i64,
    step: i64,
    target_row_index: i64,
    target_column_index: i64,
    target_window_index: i64,
};

pub const OmniNiriNavigationResult = extern struct {
    has_target: u8,
    target_window_index: i64,
    update_source_active_tile: u8,
    source_column_index: i64,
    source_active_tile_idx: i64,
    update_target_active_tile: u8,
    target_column_index: i64,
    target_active_tile_idx: i64,
    refresh_tabbed_visibility_source: u8,
    refresh_tabbed_visibility_target: u8,
};

pub const OmniNiriNavigationApplyRequest = extern struct {
    request: OmniNiriNavigationRequest,
};

pub const OmniNiriNavigationApplyResult = extern struct {
    applied: u8,
    has_target_window_id: u8,
    target_window_id: OmniUuid128,
    update_source_active_tile: u8,
    source_column_id: OmniUuid128,
    source_active_tile_idx: i64,
    update_target_active_tile: u8,
    target_column_id: OmniUuid128,
    target_active_tile_idx: i64,
    refresh_tabbed_visibility_source: u8,
    refresh_source_column_id: OmniUuid128,
    refresh_tabbed_visibility_target: u8,
    refresh_target_column_id: OmniUuid128,
};

pub const OmniNiriMutationRequest = extern struct {
    op: u8,
    direction: u8,
    infinite_loop: u8,
    insert_position: u8,
    source_window_index: i64,
    target_window_index: i64,
    max_windows_per_column: i64,
    source_column_index: i64,
    target_column_index: i64,
    insert_column_index: i64,
    max_visible_columns: i64,
    selected_node_kind: u8,
    selected_node_index: i64,
    focused_window_index: i64,
};

pub const OmniNiriMutationEdit = extern struct {
    kind: u8,
    subject_index: i64,
    related_index: i64,
    value_a: i64,
    value_b: i64,
    scalar_a: f64,
    scalar_b: f64,
};

pub const OmniNiriMutationResult = extern struct {
    applied: u8,
    has_target_window: u8,
    target_window_index: i64,
    has_target_node: u8,
    target_node_kind: u8,
    target_node_index: i64,
    edit_count: usize,
    edits: [OMNI_NIRI_MUTATION_MAX_EDITS]OmniNiriMutationEdit,
};

pub const OmniNiriMutationApplyRequest = extern struct {
    request: OmniNiriMutationRequest,
    has_incoming_window_id: u8,
    incoming_window_id: OmniUuid128,
    has_created_column_id: u8,
    created_column_id: OmniUuid128,
    has_placeholder_column_id: u8,
    placeholder_column_id: OmniUuid128,
};

pub const OmniNiriMutationApplyResult = extern struct {
    applied: u8,
    has_target_window_id: u8,
    target_window_id: OmniUuid128,
    has_target_node_id: u8,
    target_node_kind: u8,
    target_node_id: OmniUuid128,
    refresh_tabbed_visibility_count: u8,
    refresh_tabbed_visibility_column_ids: [OMNI_NIRI_RUNTIME_HINT_MAX_COLUMNS]OmniUuid128,
    reset_all_column_cached_widths: u8,
    has_delegate_move_column: u8,
    delegate_move_column_id: OmniUuid128,
    delegate_move_direction: u8,
};

pub const OmniNiriWorkspaceRequest = extern struct {
    op: u8,
    source_window_index: i64,
    source_column_index: i64,
    max_visible_columns: i64,
};

pub const OmniNiriWorkspaceEdit = extern struct {
    kind: u8,
    subject_index: i64,
    related_index: i64,
    value_a: i64,
    value_b: i64,
};

pub const OmniNiriWorkspaceResult = extern struct {
    applied: u8,
    edit_count: usize,
    edits: [OMNI_NIRI_WORKSPACE_MAX_EDITS]OmniNiriWorkspaceEdit,
};

pub const OmniNiriWorkspaceApplyRequest = extern struct {
    request: OmniNiriWorkspaceRequest,
    has_target_created_column_id: u8,
    target_created_column_id: OmniUuid128,
    has_source_placeholder_column_id: u8,
    source_placeholder_column_id: OmniUuid128,
};

pub const OmniNiriWorkspaceApplyResult = extern struct {
    applied: u8,
    has_source_selection_window_id: u8,
    source_selection_window_id: OmniUuid128,
    has_target_selection_window_id: u8,
    target_selection_window_id: OmniUuid128,
    has_moved_window_id: u8,
    moved_window_id: OmniUuid128,
};

pub const OmniDwindleSeedNode = extern struct {
    node_id: OmniUuid128,
    parent_index: i64,
    first_child_index: i64,
    second_child_index: i64,
    kind: u8,
    orientation: u8,
    ratio: f64,
    has_window_id: u8,
    window_id: OmniUuid128,
    is_fullscreen: u8,
};

pub const OmniDwindleSeedState = extern struct {
    root_node_index: i64,
    selected_node_index: i64,
    has_preselection: u8,
    preselection_direction: u8,
};

pub const OmniDwindleLayoutRequest = extern struct {
    screen_x: f64,
    screen_y: f64,
    screen_width: f64,
    screen_height: f64,
    inner_gap: f64,
    outer_gap_top: f64,
    outer_gap_bottom: f64,
    outer_gap_left: f64,
    outer_gap_right: f64,
    single_window_aspect_width: f64,
    single_window_aspect_height: f64,
    single_window_aspect_tolerance: f64,
};

pub const OmniDwindleWindowConstraint = extern struct {
    window_id: OmniUuid128,
    min_width: f64,
    min_height: f64,
    max_width: f64,
    max_height: f64,
    has_max_width: u8,
    has_max_height: u8,
    is_fixed: u8,
};

pub const OmniDwindleWindowFrame = extern struct {
    window_id: OmniUuid128,
    frame_x: f64,
    frame_y: f64,
    frame_width: f64,
    frame_height: f64,
};

pub const OmniDwindleAddWindowPayload = extern struct {
    window_id: OmniUuid128,
};

pub const OmniDwindleRemoveWindowPayload = extern struct {
    window_id: OmniUuid128,
};

pub const OmniDwindleSyncWindowsPayload = extern struct {
    window_ids: [*c]const OmniUuid128,
    window_count: usize,
};

pub const OmniDwindleMoveFocusPayload = extern struct {
    direction: u8,
};

pub const OmniDwindleSwapWindowsPayload = extern struct {
    direction: u8,
};

pub const OmniDwindleToggleFullscreenPayload = extern struct {
    unused: u8,
};

pub const OmniDwindleToggleOrientationPayload = extern struct {
    unused: u8,
};

pub const OmniDwindleResizeSelectedPayload = extern struct {
    delta: f64,
    direction: u8,
};

pub const OmniDwindleBalanceSizesPayload = extern struct {
    unused: u8,
};

pub const OmniDwindleCycleSplitRatioPayload = extern struct {
    forward: u8,
};

pub const OmniDwindleMoveSelectionToRootPayload = extern struct {
    stable: u8,
};

pub const OmniDwindleSwapSplitPayload = extern struct {
    unused: u8,
};

pub const OmniDwindleSetPreselectionPayload = extern struct {
    direction: u8,
};
